src/objects/Organisation_Video__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>YouTube - External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YouTube - TSL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expiry_date__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Organisation</label>
        <referenceTo>Organisation__c</referenceTo>
        <relationshipLabel>Organisation Video</relationshipLabel>
        <relationshipName>Organisation_Video</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Organisation Video</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organisation Video</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>